--- a/ws.html
+++ b/ws.html
@@ -1,7 +1,14 @@
-<script>
-    let ws = new WebSocket('ws://localhost:8000')
-    console.log(ws)
+<script src="https://cdn.socket.io/3.1.3/socket.io.min.js" integrity="sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh" crossorigin="anonymous"></script>
 
-    ws.onopen = event => {ws.send("Connected")}
-    ws.onmessage = (event) => {console.log(event)}
-</script> 
+<script>
+    const socket = io('http://localhost:8000')
+    console.log(socket)
+
+    socket.on('connect',(data)=>{
+        socket.on('welcome',(message)=>{
+            console.log(message)
+        })
+        socket.emit('message',{data:"Hi there"})
+    })
+
+</script>
